--- a/index.html
+++ b/index.html
@@ -226,12 +226,12 @@
                     <div class="pix-info">
                         <span class="pix-label">Chave PIX Copia e Cola (CLIQUE para Copiar):</span>
                         <div class="pix-code" onclick="copyToClipboard('00020101021126900014br.gov.bcb.pix0114299527710001600250Pacote de 10h de Montaer ou Colt na promocao de BF52040000530398654077300.005802BR5922SAFE ESCOLA DE AVIACAO6013SAO JOSE DOS 62170513BlackFriday1063047A6E')">
-                            00020101021126900014br.gov.bcb.pix0114299527710001600250Pacote de 10h de Montaer ou Colt na promocao de BF52040000530398654077300.005802BR5922SAFE ESCOLA DE AVIACAO6013SAO JOSE DOS 62170513BlackFriday1063047A6E
+                            00020101021126630014br.gov.bcb.pix0114299527710001600223Promocao black November52040000530398654077700.005802BR5917SAFE E DE AVIACAO6013SAO JOSE DOS 62070503***63047D7F
                         </div>
                     </div>
                     <div class="qr-code">
                         <p>Ou aponte a câmera (QR Code):</p>
-                        <img src="https://i.imgur.com/7GfqUpZ.jpeg" alt="QR Code PIX 10h Montaer ou Colt">
+                        <img src="https://i.imgur.com/hQdYg3F.jpeg" alt="QR Code PIX 10h Montaer ou Colt">
                     </div>
                 </div>
                 
@@ -242,12 +242,12 @@
                     <div class="pix-info">
                         <span class="pix-label">Chave PIX Copia e Cola (CLIQUE para Copiar):</span>
                         <div class="pix-code" onclick="copyToClipboard('00020101021126900014br.gov.bcb.pix0114299527710001600250Pacote de 20h de Montaer ou Colt na promocao de BF520400005303986540814600.005802BR5922SAFE ESCOLA DE AVIACAO6013SAO JOSE DOS 62260522BlackFriday20MC01eCOLT6304D145')">
-                            00020101021126900014br.gov.bcb.pix0114299527710001600250Pacote de 20h de Montaer ou Colt na promocao de BF520400005303986540814600.005802BR5922SAFE ESCOLA DE AVIACAO6013SAO JOSE DOS 62260522BlackFriday20MC01eCOLT6304D145
+                            00020101021126630014br.gov.bcb.pix0114299527710001600223Promocao black November520400005303986540815400.005802BR5917SAFE E DE AVIACAO6013SAO JOSE DOS 62070503***630449ED
                         </div>
                     </div>
                     <div class="qr-code">
                         <p>Ou aponte a câmera (QR Code):</p>
-                        <img src="https://i.imgur.com/dXooi1b.jpeg" alt="QR Code PIX 20h Montaer ou Colt">
+                        <img src="https://i.imgur.com/bVDdMPR.jpeg" alt="QR Code PIX 20h Montaer ou Colt">
                     </div>
                 </div>
 
@@ -258,12 +258,12 @@
                     <div class="pix-info">
                         <span class="pix-label">Chave PIX Copia e Cola (CLIQUE para Copiar):</span>
                         <div class="pix-code" onclick="copyToClipboard('00020101021126820014br.gov.bcb.pix0114299527710001600242Pacote de 10h de Pmentor na promocao de BF52040000530398654079990.005802BR5922SAFE ESCOLA DE AVIACAO6013SAO JOSE DOS 62240520BlackFriday10Pmentor63047DEC')">
-                            00020101021126820014br.gov.bcb.pix0114299527710001600242Pacote de 10h de Pmentor na promocao de BF52040000530398654079990.005802BR5922SAFE ESCOLA DE AVIACAO6013SAO JOSE DOS 62240520BlackFriday10Pmentor63047DEC
+                            00020101021126630014br.gov.bcb.pix0114299527710001600223Promocao black November52040000530398654079990.005802BR5917SAFE E DE AVIACAO6013SAO JOSE DOS 62070503***630438D2
                         </div>
                     </div>
                     <div class="qr-code">
                         <p>Ou aponte a câmera (QR Code):</p>
-                        <img src="https://i.imgur.com/QVuvoYS.jpeg" alt="QR Code PIX 10h P-Mentor">
+                        <img src="https://i.imgur.com/8WWj6UJ.jpeg" alt="QR Code PIX 10h P-Mentor">
                     </div>
                 </div>
                 
@@ -274,12 +274,12 @@
                     <div class="pix-info">
                         <span class="pix-label">Chave PIX Copia e Cola (CLIQUE para Copiar):</span>
                         <div class="pix-code" onclick="copyToClipboard('00020101021126820014br.gov.bcb.pix0114299527710001600242Pacote de 20h de Pmentor na promocao de BF520400005303986540819980.005802BR5922SAFE ESCOLA DE AVIACAO6013SAO JOSE DOS 62240520BlackFriday20Pmentor6304D5ED')">
-                            00020101021126820014br.gov.bcb.pix0114299527710001600242Pacote de 20h de Pmentor na promocao de BF520400005303986540819980.005802BR5922SAFE ESCOLA DE AVIACAO6013SAO JOSE DOS 62240520BlackFriday20Pmentor6304D5ED
+                            00020101021126630014br.gov.bcb.pix0114299527710001600223Promocao black November520400005303986540819980.005802BR5917SAFE E DE AVIACAO6013SAO JOSE DOS 62070503***6304C2F9
                         </div>
                     </div>
                     <div class="qr-code">
                         <p>Ou aponte a câmera (QR Code):</p>
-                        <img src="https://i.imgur.com/sPV6QAR.jpeg" alt="QR Code PIX 20h P-Mentor">
+                        <img src="https://i.imgur.com/psJmxBE.jpeg" alt="QR Code PIX 20h P-Mentor">
                     </div>
                 </div>
 
